--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mijn Website</title>
+  <title>Alvin's website^^</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+  <header>a</header>
+  <nav>b</nav>
+  <main>c</main>
+  <footer>gulp</footer>
   Mijn favoriete kleur is ...
 </body>
 
