--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-  <header>a</header>
-  <nav>b</nav>
-  <main>c</main>
-  <footer>gulp</footer>
-  Mijn favoriete kleur is ...
+  <header>header</header>
+  <nav>nav</nav>
+  <main>main</main>
+  <footer>footer</footer>
 </body>
 
 </html>
