--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-  <header>header</header>
+  <header>
+   <h1> About me </h1>
+  </header>
   <nav>nav</nav>
-  <main>main</main>
+  <main> main </main>
   <footer>footer</footer>
 </body>
 
