--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
   <header>
    <h1> About me </h1>
   </header>
-  <nav>nav</nav>
+    <nav>
+ <ul>
+   <li> 
+   <a href=‘index.html’> a </a> 
+  </li>
+   <li> 
+   <a href=‘pagina2.html’> b </a> 
+  </li> 
+   <li> 
+   <a href=‘pagina3.html’> c </a> 
+  </li>
+ </ul>
+</nav>
   <main> main </main>
-  <footer>footer</footer>
+  <footer>Alvin HA4G</footer>
 </body>
 
 </html>
