--- a/hobbies.html
+++ b/hobbies.html
@@ -10,22 +10,22 @@
 
 <body>
   <header>
-   <h1> Homepage  </h1>
+   <h1> Hobbies </h1>
   </header>
     <nav>
  <ul>
    <li> 
-   <a href='hobbies.html'> ᯓ :ִ✮ᯓ hobbies ⊹˖ᯓ⭑ </a> 
+   <a href='index.html'> Homepage </a> 
   </li>
    <li> 
-   <a href='muziek.html'> *•.¸¸♪•*Muziek¨*•.¸¸♬ </a> 
+   <a href='pagina2.html'>  </a> 
   </li> 
    <li> 
    <a href='pagina3.html'> c </a> 
   </li>
  </ul>
 </nav>
-  <main> sob </main>
+  <main> yay my hobbies </main>
   <footer>Alvin HA4G</footer>
 </body>
 
