--- a/muziek.html
+++ b/muziek.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-   <h1> Homepage  </h1>
+   <h1> *•.¸¸♪•*Muziek¨*•.¸¸♬  </h1>
   </header>
     <nav>
  <ul>
@@ -18,7 +18,7 @@
    <a href='hobbies.html'> ᯓ :ִ✮ᯓ hobbies ⊹˖ᯓ⭑ </a> 
   </li>
    <li> 
-   <a href='muziek.html'> *•.¸¸♪•*Muziek¨*•.¸¸♬ </a> 
+   <a href='music.html'> *•.¸¸♪•*Muziek¨*•.¸¸♬ </a> 
   </li> 
    <li> 
    <a href='pagina3.html'> c </a> 
