--- a/muziek.html
+++ b/muziek.html
@@ -10,18 +10,18 @@
 
 <body>
   <header>
-   <h1> *•.¸¸♪•*Muziek¨*•.¸¸♬  </h1>
+   <h1> Muziek </h1>
   </header>
     <nav>
  <ul>
    <li> 
-   <a href='hobbies.html'> ᯓ :ִ✮ᯓ hobbies ⊹˖ᯓ⭑ </a> 
+   <a href='index.html' > 𐙚𓏲⋆ Homepage ⋆ᡣ𐭩 </a> 
   </li>
    <li> 
-   <a href='music.html'> *•.¸¸♪•*Muziek¨*•.¸¸♬ </a> 
+   <a href='hobbies.html'> ᯓִ✮ᯓ hobbies ⊹˖ᯓ </a> 
   </li> 
    <li> 
-   <a href='pagina3.html'> c </a> 
+   <a href='muziek.html'> •.♪• Muziek *•.♬ </a> 
   </li>
  </ul>
 </nav>
