--- a/hobbies.html
+++ b/hobbies.html
@@ -15,13 +15,13 @@
     <nav>
  <ul>
    <li> 
-   <a href='index.html'> Homepage </a> 
+   <a href='index.html' > 𐙚𓏲⋆ Homepage ⋆ᡣ𐭩 </a> 
   </li>
    <li> 
-   <a href='pagina2.html'>  </a> 
+   <a href='hobbies.html'> ᯓִ✮ hobbies ⊹ᯓ </a> 
   </li> 
    <li> 
-   <a href='pagina3.html'> c </a> 
+   <a href='muziek.html'> •.♪• Muziek *•.♬ </a> 
   </li>
  </ul>
 </nav>
