--- a/muziek.html
+++ b/muziek.html
@@ -12,18 +12,20 @@
   <header>
    <h1> Muziek </h1>
   </header>
-    <nav>
+<nav>
  <ul>
+  <h1>
    <li> 
-   <a href='index.html' > 𐙚𓏲⋆ Homepage ⋆ᡣ𐭩 </a> 
+   <a href='index.html' > 𓏲⋆ Homepage ⋆ᡣ𐭩 </a> 
   </li>
    <li> 
-   <a href='hobbies.html'> ᯓִ✮ᯓ hobbies ⊹˖ᯓ </a> 
+   <a href='hobbies.html'> *ᯓִ✮ᯓ hobbies ⊹˖ᯓ </a> 
   </li> 
    <li> 
    <a href='muziek.html'> •.♪• Muziek *•.♬ </a> 
   </li>
  </ul>
+ </h1>
 </nav>
   <main> sob </main>
   <footer>Alvin HA4G</footer>
