--- a/hobbies.html
+++ b/hobbies.html
@@ -19,7 +19,7 @@
    <a href='index.html' > 𓏲⋆ Homepage ⋆ᡣ𐭩 </a> 
   </li>
    <li> 
-   <a href='hobbies.html'> *ᯓִ✮ᯓ hobbies ⊹˖ᯓ </a> 
+   <a href='hobbies.html'> ✮ᯓ Hobbies ⊹˖ᯓ </a> 
   </li> 
    <li> 
    <a href='muziek.html'> •.♪• Muziek *•.♬ </a> 
@@ -27,7 +27,10 @@
  </ul>
  </h1>
 </nav>
-  <main> yay my hobbies </main>
+  <main>
+    <h2> Yay my hobbies </h2>
+    <img src ="images/foto/kaas.webp" alt="kaas" width="1500" height="600">
+  </main>
   <footer>Alvin HA4G</footer>
 </body>
 
