--- a/muziek.html
+++ b/muziek.html
@@ -19,7 +19,7 @@
    <a href='index.html' > 𓏲⋆ Homepage ⋆ᡣ𐭩 </a> 
   </li>
    <li> 
-   <a href='hobbies.html'> *ᯓִ✮ᯓ hobbies ⊹˖ᯓ </a> 
+   <a href='hobbies.html'> ✮ᯓ Hobbies ⊹˖ᯓ </a> 
   </li> 
    <li> 
    <a href='muziek.html'> •.♪• Muziek *•.♬ </a> 
@@ -27,7 +27,9 @@
  </ul>
  </h1>
 </nav>
-  <main> sob </main>
+  <main>
+    <h2> you like jazz?</h2>
+  </main>
   <footer>Alvin HA4G</footer>
 </body>
 
