--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <a href='index.html' > 𓏲⋆ Homepage ⋆ᡣ𐭩 </a> 
   </li>
    <li> 
-   <a href='hobbies.html'> *ᯓִ✮ᯓ hobbies ⊹˖ᯓ </a> 
+   <a href='hobbies.html'> ✮ᯓ Hobbies ⊹˖ᯓ </a> 
   </li> 
    <li> 
    <a href='muziek.html'> •.♪• Muziek *•.♬ </a> 
@@ -28,7 +28,7 @@
  </h1>
 </nav>
   <main> 
-    <h2>sob</h2>
+    <h2>hey papa</h2>
   </main>
   <footer>Alvin HA4G</footer>
 </body>
