footer and usagi foto

--- a/hobbies.html
+++ b/hobbies.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Alvin's website^^</title>
@@ -29,9 +30,9 @@
 </nav>
   <main>
     <h2> Yay my hobbies </h2>
-    <img src ="images/foto/kaas.webp" alt="kaas" width="1500" height="600">
+    <img src ="images/foto/usagi.webp" alt="usagi" height="600">
   </main>
-  <footer>Alvin HA4G</footer>
+  <footer> © Alvin Zhang | HA4G | hooray </footer>
 </body>
 
 </html>
