--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 </nav>
   <main> 
     <h2>hey papa</h2>
+    <img src ="images/foto/kaas.webp" alt="kaas" height="600">
   </main>
-  <footer>Alvin HA4G</footer>
+  <footer> © Alvin Zhang | HA4G | hooray </footer>
 </body>
 
 </html>
