--- a/muziek.html
+++ b/muziek.html
@@ -28,9 +28,9 @@
  </h1>
 </nav>
   <main>
-    <h2> you like jazz?</h2>
+    <h2> Ya like jazz?</h2>
   </main>
-  <footer>Alvin HA4G</footer>
+  <footer> © Alvin Zhang | HA4G | hooray </footer>
 </body>
 
 </html>
