add: 2 photo, music txt, into txt, anc taller

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header>
    <h1> Homepage </h1>
+   <img src ="images/foto/Logo.png" alt="Logo">
   </header>
 <nav>
  <ul>
@@ -28,10 +29,14 @@
  </h1>
 </nav>
   <main> 
-    <h2>hey papa</h2>
-    <img src ="images/foto/kaas.webp" alt="kaas" height="600">
+    <h2 class="balk"> Welkom! </h2>
+    <h3> introductie^^  
+      Mijn naam is Alvin Zhang en ik ben 17 jaar oud, ik zit op het ISW hoogeland en dit is mijn website! Ik heb geprobeerd om zoveel mogelijk
+      informatie over mezelf te geven dus hopelijk kom je me beter te weten via deze website :D 
+    </h3>
+    <img src ="images/foto/Main 1.jpg" alt="Usagi, chiikawa, hachiware" height="400">
   </main>
-  <footer> © Alvin Zhang | HA4G | hooray </footer>
+  <footer> © Alvin Zhang | HA4G | Gemaakt als opdracht voor Informatica </footer>
 </body>
 
 </html>
