--- a/muziek.html
+++ b/muziek.html
@@ -11,6 +11,7 @@
 <body>
   <header>
    <h1> Muziek </h1>
+   <img src ="images/foto/Logo.png" alt="Logo">
   </header>
 <nav>
  <ul>
@@ -28,9 +29,20 @@
  </h1>
 </nav>
   <main>
-    <h2> Ya like jazz?</h2>
+    <h2 class="balk"> Laufey - Jazz </h2>
+    <img src ="images/foto/Laufey.png" alt="artiest Laufey" height="275">
+    <img src ="images/foto/laufey 2.webp" alt="artiest laufey posing" height="275">
+    <h3> 
+    bababada
+    </h3>
+    <h2 class="balk"> ILLIT - Kpop </h2>
+    <img src ="images/foto/ILLIT.png" alt="Kpop groep ILLIT discography + members" height="275">
+    <img src ="images/foto/ILLIT 2.webp" alt="ILLIT members Preformance" height="275">
+    <h3> 
+      Iroha, Wonhee, Moka, Yunah, Minju
+    </h3>
   </main>
-  <footer> © Alvin Zhang | HA4G | hooray </footer>
+  <footer> © Alvin Zhang | HA4G | Gemaakt als opdracht voor Informatica </footer>
 </body>
 
 </html>
