--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-  <
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Alvin's website^^</title>
@@ -11,7 +10,8 @@
 
 <body>
   <header>
-   <h1> Hobbies </h1>
+    <h1> Hobbies </h1>
+    <img src ="images/foto/Logo.png" alt="Logo">
   </header>
 <nav>
  <ul>
@@ -29,10 +29,24 @@
  </h1>
 </nav>
   <main>
-    <h2> Yay my hobbies </h2>
-    <img src ="images/foto/usagi.webp" alt="usagi" height="600">
+    <h2 class="balk"> Games </h2>
+    <img src ="images/foto/Games 1.png" alt="GI & HSR" height="275">
+    <img src ="images/foto/Games 2.jpeg" alt="VAL" height="275">
+    <h3> Mijn Favourite games op dit moment zijn: Genshin Impact, Honkai: Star Rail en Valorant.
+      Ik speel deze spellen al sinds het begin dat ze uitwamen en ben ze ook blijven gaan spelen.
+      Genshin vind ik een onzettend leuk spel sinds het een openworld game is waarin je van alles kan doen en ook omdat je het samen met vrienden het kan spelen via coop.
+      Honkai vind ik een leuk spel sinds ik zeer in het verhaal zit en omdat het in een soort van multiverse van Genshin zit.
+      Valorant vind ik een leuk spel omdat het een schietspel is die ik vaak met vrienden samen speel waardoor het leuker en chaotiser is.
+    </h3>
+    <h2 class="balk"> Knutselen </h2>
+    <img src ="images/foto/craft 1.png" alt="Origami, papier marche, custom figure shelf, crochet, pipe cleaner flowers" height="275">
+    <h3> Een ander hobby dat ik zeer leuk vind is knutselen! Ik heb verschillende projecten gedaan zoals: Papier mache koi vis, Customized figure kast, Origami rozen , crochet headphone decoratie en pipe cleaner flowers gemaakt.
+      Ik vind knutselen wel leuk omdat je er creatief mee kan zijn en je er ook leuke dingen mee kan maken die je kan gebruiken als decoratie in je kamer of als cadeau voor vrienden en familie.
+      Ik ben heel blij met alles wat ik tot nu toe heb gemaakt, wel moet ik nog oefenen met het crocheten maar voor de rest is het super leuk om te doen!
+      Fun fact, Een week geleden hebben Yiting, Laura en ik in de foto linksboven, een bouqet gemaakt van pipe cleaners voor een verjaardag d:
+    </h3>
   </main>
-  <footer> © Alvin Zhang | HA4G | hooray </footer>
+  <footer> © Alvin Zhang | HA4G | Gemaakt als opdracht voor Informatica </footer>
 </body>
 
 </html>
