--- a/hobbies.html
+++ b/hobbies.html
@@ -40,7 +40,8 @@
     </h3>
     <h2 class="balk"> Knutselen </h2>
     <img src ="images/foto/craft 1.png" alt="Origami, papier marche, custom figure shelf, crochet, pipe cleaner flowers" height="275">
-    <h3> Een ander hobby dat ik zeer leuk vind is knutselen! Ik heb verschillende projecten gedaan zoals: Papier mache koi vis, Customized figure kast, Origami rozen , crochet headphone decoratie en pipe cleaner flowers gemaakt.
+    <h3> 
+      ander hobby dat ik zeer leuk vind is knutselen! Ik heb verschillende projecten gedaan zoals: Papier mache koi vis, Customized figure kast, Origami rozen , crochet headphone decoratie en pipe cleaner flowers gemaakt.
       Ik vind knutselen wel leuk omdat je er creatief mee kan zijn en je er ook leuke dingen mee kan maken die je kan gebruiken als decoratie in je kamer of als cadeau voor vrienden en familie.
       Ik ben heel blij met alles wat ik tot nu toe heb gemaakt, wel moet ik nog oefenen met het crocheten maar voor de rest is het super leuk om te doen!
       Fun fact, Een week geleden hebben Yiting, Laura en ik in de foto linksboven, een bouqet gemaakt van pipe cleaners voor een verjaardag d:
