--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
   <main> 
     <h2 class="balk"> Welkom! </h2>
     <h3> introductie^^  
-      Mijn naam is Alvin Zhang en ik ben 17 jaar oud, ik zit op het ISW hoogeland en dit is mijn website! Ik heb geprobeerd om zoveel mogelijk
-      informatie over mezelf te geven dus hopelijk kom je me beter te weten via deze website :D 
+      <p>Mijn naam is Alvin Zhang en ik ben 17 jaar oud.</p>
+      <p>Ik ben geboren op 7 April 2008</p>
+      <p>Ik zit op het ISW hoogeland en dit is mijn website!</p>
+      <p></p>
+      <p>Ik heb geprobeerd om zoveel mogelijk informatie over mezelf te geven dus hopelijk kom je me beter te weten via deze website :D</p>
     </h3>
     <img src ="images/foto/Main 1.jpg" alt="Usagi, chiikawa, hachiware" height="400">
   </main>
