--- a/hobbies.html
+++ b/hobbies.html
@@ -30,14 +30,19 @@
 </nav>
   <main>
     <h2 class="balk"> Games </h2>
-    <img src ="images/foto/Games 1.png" alt="GI & HSR" height="275">
-    <img src ="images/foto/Games 2.jpeg" alt="VAL" height="275">
-    <h3> Mijn Favourite games op dit moment zijn: Genshin Impact, Honkai: Star Rail en Valorant.
-      Ik speel deze spellen al sinds het begin dat ze uitwamen en ben ze ook blijven gaan spelen.
-      Genshin vind ik een onzettend leuk spel sinds het een openworld game is waarin je van alles kan doen en ook omdat je het samen met vrienden het kan spelen via coop.
-      Honkai vind ik een leuk spel sinds ik zeer in het verhaal zit en omdat het in een soort van multiverse van Genshin zit.
-      Valorant vind ik een leuk spel omdat het een schietspel is die ik vaak met vrienden samen speel waardoor het leuker en chaotiser is.
+    <img src ="images/foto/Games 1.png" alt="Genshin & HSR" height="275">
+    <img src ="images/foto/Games 2.jpeg" alt="Valorant" height="275">
+    <img src ="images/foto/stardew.webp" alt="Stardew Valley" height="275">
+
+    <h3><p>Mijn Favourite games op dit moment zijn:</p>
+      <p>Genshin Impact, Honkai: Star Rail, Valorant en Stardew Valley.</p>
+      <p>Ik speel deze spellen al sinds het begin dat ze uitkwamen (behalve Stardew Valley) en ben ze ook blijven gaan spelen sinds ik ze heel leuk vind!</p>
+      <p>Genshin vind ik een onzettend leuk spel sinds het een openworld game is, je kan in het spel van alles doen, ook is het super leuk omdat je het samen met vrienden kan spelen via coop.</p>
+      <p>Honkai vind ik een leuk spel sinds ik zeer in het verhaal zit en omdat het in een soort van multiverse van Genshin zit, naast dat is het een turnbased game inplaats van een openworld game als genshin dus daar geniet ik ook van.</p>
+      <p>Valorant vind ik een leuk spel omdat het een schietspel is die ik vaak met vrienden samen speel waardoor het leuker en chaotiser is.</p>
+      <p>Stardew Valley is een cozy spel waarin je gewoon een boederij runt, je kan het alleen spelen of met vrienden waardoor de ervaring kan verschillen (in een goede manier natuurlijk).</p>
     </h3>
+
     <h2 class="balk"> Knutselen </h2>
     <img src ="images/foto/craft 1.png" alt="Origami, papier marche, custom figure shelf, crochet, pipe cleaner flowers" height="275">
     <h3> 
