--- a/muziek.html
+++ b/muziek.html
@@ -33,7 +33,41 @@
     <img src ="images/foto/Laufey.png" alt="artiest Laufey" height="275">
     <img src ="images/foto/laufey 2.webp" alt="artiest laufey posing" height="275">
     <h3> 
-    bababada
+      <p>Een van mijn favourite artiesten is: Laufey!!</p>
+      <p>Ik hou van haar muziek sinds het rustgevend is, het gaat vaak ook over haar persoonlijke ervaringen met het leven.
+        Ze maakt vooral jazz muziek maar heeft ook wat pop nummers.
+      </p>
+      <p>Hier is een tabel met haar albums:</p>
+<table>
+<thead>
+<tr>
+<th>Albums</th>
+<th>Album cover</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Typical Of Me</td>
+<td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
+</tr>
+<tr>
+<td>Everything I Know About Love</td>
+<td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
+</tr>
+<tr>
+<td>Bewitched</td>
+<td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
+</tr>
+<tr>
+<td>Bewitched: The Goddess Edition</td>
+<td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
+</tr>
+<tr>
+<td>A Matter Of Time</td>
+<td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
+</tr>
+</tbody>
+</table>
     </h3>
     <h2 class="balk"> ILLIT - Kpop </h2>
     <img src ="images/foto/ILLIT.png" alt="Kpop groep ILLIT discography + members" height="275">
