--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     <h2 class="balk"> Welkom! </h2>
     <h3> introductie^^  
       <p>Mijn naam is Alvin Zhang en ik ben 17 jaar oud.</p>
+      <p>Mijn gezin bestaat uit mijn vader,moeder, zusje en ik.</p>
       <p>Ik ben geboren op 7 April 2008</p>
-      <p>Ik zit op het ISW hoogeland en dit is mijn website!</p>
-      <p></p>
+      <p>Ik zit op het ISW hoogeland, ik heb mijn mavo diploma en ben nu door gegaan op havo niveau.</p>
+      <p>Ik heb een bijbaantje bij de Albert Heijn in naaldwijk</p>
       <p>Ik heb geprobeerd om zoveel mogelijk informatie over mezelf te geven dus hopelijk kom je me beter te weten via deze website :D</p>
     </h3>
     <img src ="images/foto/Main 1.jpg" alt="Usagi, chiikawa, hachiware" height="400">
