--- a/muziek.html
+++ b/muziek.html
@@ -41,30 +41,36 @@
 <table>
 <thead>
 <tr>
-<th>Albums</th>
+<th>Album Title</th>
 <th>Album cover</th>
+<th>Favourite nummer(s)</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>Typical Of Me</td>
 <td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
+<td>Typical Of Me</td>
 </tr>
 <tr>
 <td>Everything I Know About Love</td>
 <td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
+<td>Typical Of Me</td>
 </tr>
 <tr>
 <td>Bewitched</td>
 <td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
+<td>Typical Of Me</td>
 </tr>
 <tr>
 <td>Bewitched: The Goddess Edition</td>
 <td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
+<td>Typical Of Me</td>
 </tr>
 <tr>
 <td>A Matter Of Time</td>
 <td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
+<td>Typical Of Me</td>
 </tr>
 </tbody>
 </table>
