add more photos

--- a/hobbies.html
+++ b/hobbies.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1> Hobbies </h1>
-    <img src ="images/foto/Logo.png" alt="Logo">
+    <img src ="images/foto/me.png" alt="Logo">
   </header>
 <nav>
  <ul>
@@ -30,9 +30,9 @@
 </nav>
   <main>
     <h2 class="balk"> Games </h2>
-    <img src ="images/foto/Games 1.png" alt="Genshin & HSR" height="275">
-    <img src ="images/foto/Games 2.jpeg" alt="Valorant" height="275">
-    <img src ="images/foto/stardew.webp" alt="Stardew Valley" height="275">
+    <img src ="images/foto/Games 1.png" alt="Genshin & HSR" height="250">
+    <img src ="images/foto/Games 2.jpeg" alt="Valorant" height="250">
+    <img src ="images/foto/stardew.webp" alt="Stardew Valley" height="250">
 
     <h3><p>Mijn Favourite games op dit moment zijn:</p>
       <p>Genshin Impact, Honkai: Star Rail, Valorant en Stardew Valley.</p>
@@ -41,18 +41,43 @@
       <p>Honkai vind ik een leuk spel sinds ik zeer in het verhaal zit en omdat het in een soort van multiverse van Genshin zit, naast dat is het een turnbased game inplaats van een openworld game als genshin dus daar geniet ik ook van.</p>
       <p>Valorant vind ik een leuk spel omdat het een schietspel is die ik vaak met vrienden samen speel waardoor het leuker en chaotiser is.</p>
       <p>Stardew Valley is een cozy spel waarin je gewoon een boederij runt, je kan het alleen spelen of met vrienden waardoor de ervaring kan verschillen (in een goede manier natuurlijk).</p>
+      <p>Hieronder nog wat spellen dat ik graag speel: </p>
+      <ul>
+        <li>Fields Of Mistria</li>
+        <li>Roblox</li>
+        <li>Minecraft</li>
+        <li>The Legend Of Zelda (love the franchise)</li>
+        <li>Animal Crossing: New Horizons</li>
+        <li>Ik heb er nog zoveel meer maar anders komt hier geen eind aan...</li>
+      </ul>
+
     </h3>
 
     <h2 class="balk"> Knutselen </h2>
-    <img src ="images/foto/craft 1.png" alt="Origami, papier marche, custom figure shelf, crochet, pipe cleaner flowers" height="275">
+    <img src ="images/foto/craft 1.png" alt="Origami, papier marche, custom figure shelf, crochet, pipe cleaner flowers" height="250">
+    <img src ="images/foto/vis.png" alt="Koi Fish closure" height="250">
+    <img src ="images/foto/material.png" alt="materials" height="250">
     <h3> 
-      ander hobby dat ik zeer leuk vind is knutselen! Ik heb verschillende projecten gedaan zoals: Papier mache koi vis, Customized figure kast, Origami rozen , crochet headphone decoratie en pipe cleaner flowers gemaakt.
-      Ik vind knutselen wel leuk omdat je er creatief mee kan zijn en je er ook leuke dingen mee kan maken die je kan gebruiken als decoratie in je kamer of als cadeau voor vrienden en familie.
-      Ik ben heel blij met alles wat ik tot nu toe heb gemaakt, wel moet ik nog oefenen met het crocheten maar voor de rest is het super leuk om te doen!
-      Fun fact, Een week geleden hebben Yiting, Laura en ik in de foto linksboven, een bouqet gemaakt van pipe cleaners voor een verjaardag d:
+      <p>Een ander hobby dat ik zeer leuk vind is knutselen!</p>
+      <p>Ik heb verschillende projecten gedaan zoals: Papier mache koi vis, Customized figure kast, Origami rozen , crochet headphone decoratie en pipe cleaner flowers gemaakt.</p>
+      <p>(fotos van de projecten staan in de fotos boven en ook de pipe cleaners voordat ik ze had gebruikt)</p>
+      <p>Ik vind knutselen wel leuk omdat je er creatief mee kan zijn en je er ook leuke dingen mee kan maken die je kan gebruiken als decoratie in je kamer of als cadeau voor vrienden en familie.</p>
+      <p>Ik ben heel blij met alles wat ik tot nu toe heb gemaakt, wel moet ik nog oefenen met het crocheten maar voor de rest is het super leuk om te doen!</p>
+      <p>Fun fact, Een week geleden hebben Yiting, Laura en ik in de foto linksboven, een bouqet gemaakt van pipe cleaners voor een verjaardag d:</p>
     </h3>
+
+    <h2 class="balk"> Overig </h2>
+    <img src ="images/foto/Over.JPG" alt="Piano" height="250">
+    <img src ="images/foto/over2.jpg" alt="Hangout 1" height="250">
+    <img src ="images/foto/over 3.webp" alt="Hangout 2" height="250">
+    <h3>
+      <p>Ik zat op piano voor 8-9 jaar! Heb het 2 jaar geleden laten vallen sinds ik niet zoveel tijd meer had maar ik wil het in de toekomst wel weer oppakken.</p>
+      <p>Ik zit op scouting naaldwijk, ik zit er nu eigenlijk alleen nog op omdat Floyd er ook op zit T-T</p>
+      <p>De fotos dat ik op piano zit heb ik momenteel niet en fotos van de scouting zijn niet al te best dus vandaar deze 3 fotos 0-0</p>
+    </h3>
+
   </main>
-  <footer> © Alvin Zhang | HA4G | Gemaakt als opdracht voor Informatica </footer>
+  <footer> © Alvin Zhang | HA4G | Volg mij op: <a href="https://www.instagram.com/xiaoaimondtofu/">Instagram</a> en  <a href="https://www.tiktok.com/@xiaoalmondtofu1?lang=nl-NL">Tik Tok</a> | Gemaakt als opdracht voor Informatica </footer>
 </body>
 
 </html>
