--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
    <h1> Homepage </h1>
-   <img src ="images/foto/Logo.png" alt="Logo">
+   <img src ="images/foto/me.png" alt="Logo">
   </header>
 <nav>
  <ul>
@@ -30,17 +30,19 @@
 </nav>
   <main> 
     <h2 class="balk"> Welkom! </h2>
-    <h3> introductie^^  
-      <p>Mijn naam is Alvin Zhang en ik ben 17 jaar oud.</p>
-      <p>Mijn gezin bestaat uit mijn vader,moeder, zusje en ik.</p>
-      <p>Ik ben geboren op 7 April 2008</p>
-      <p>Ik zit op het ISW hoogeland, ik heb mijn mavo diploma en ben nu door gegaan op havo niveau.</p>
-      <p>Ik heb een bijbaantje bij de Albert Heijn in naaldwijk</p>
+    <h3> Introductie^^
+      <p>Mijn naam is Alvin Zhang en ik ben 17 jaar oud۶ৎ.</p>
+      <p>Ik ben geboren op 7 April 2008.</p>
+      <p>Ik kan kan Nederlands, Chinees en Engels spreken.</p>
+      <p>Mijn gezin bestaat uit mijn vader, moeder, zusje en ik.</p>
+      <p>Ik zit op het ISW hoogeland, ik heb mijn mavo diploma gehaald en ben nu door gegaan op havo niveau.</p>
+      <p>Ik heb een bijbaantje bij de Albert Heijn in naaldwijk en werk meestal in de weekend.</p>
+      <p>Mijn beste vrienden momenteel zijn: Qianyi, Floyd, Jack, Laura, Yiting, Lindey en Iris۶ৎ.</p>
       <p>Ik heb geprobeerd om zoveel mogelijk informatie over mezelf te geven dus hopelijk kom je me beter te weten via deze website :D</p>
     </h3>
-    <img src ="images/foto/Main 1.jpg" alt="Usagi, chiikawa, hachiware" height="400">
+    <img src ="images/foto/Main 1.jpg" alt="Usagi, chiikawa, hachiware" height="250">
   </main>
-  <footer> © Alvin Zhang | HA4G | Gemaakt als opdracht voor Informatica </footer>
+  <footer> © Alvin Zhang | HA4G | Volg mij op: <a href="https://www.instagram.com/xiaoaimondtofu/">Instagram</a> en  <a href="https://www.tiktok.com/@xiaoalmondtofu1?lang=nl-NL">Tik Tok</a> | Gemaakt als opdracht voor Informatica </footer>
 </body>
 
 </html>
