--- a/muziek.html
+++ b/muziek.html
@@ -11,7 +11,7 @@
 <body>
   <header>
    <h1> Muziek </h1>
-   <img src ="images/foto/Logo.png" alt="Logo">
+   <img src ="images/foto/me.png" alt="Logo">
   </header>
 <nav>
  <ul>
@@ -37,52 +37,103 @@
       <p>Ik hou van haar muziek sinds het rustgevend is, het gaat vaak ook over haar persoonlijke ervaringen met het leven.
         Ze maakt vooral jazz muziek maar heeft ook wat pop nummers.
       </p>
-      <p>Hier is een tabel met haar albums:</p>
+      <p>Hier is een tabel met Laufey haar albums:</p>
 <table>
 <thead>
 <tr>
-<th>Album Title</th>
-<th>Album cover</th>
+<th>Album Titel</th>
 <th>Favourite nummer(s)</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td>Typical Of Me</td>
-<td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
-<td>Typical Of Me</td>
+<td>Magnolia, James</td>
 </tr>
 <tr>
 <td>Everything I Know About Love</td>
-<td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
-<td>Typical Of Me</td>
+<td>Fragile, Just Like Chet, Everything I Know About Love, Hi</td>
 </tr>
 <tr>
 <td>Bewitched</td>
-<td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
-<td>Typical Of Me</td>
+<td>Dreamer, Second Best</td>
 </tr>
 <tr>
 <td>Bewitched: The Goddess Edition</td>
-<td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
-<td>Typical Of Me</td>
+<td>Bored, Goddes</td>
 </tr>
 <tr>
 <td>A Matter Of Time</td>
-<td> <img src="images/foto/craft 1.png" alt="idk" height="20px"> </td>
-<td>Typical Of Me</td>
+<td>Castle In Hollywood, Forget-Me-Not, Tough Luck, Mr. Ecletic</td>
+</tr>
+<tr>
+<td>Collab/Singles</td>
+<td>Let You Break My Heart Again, A Night To Remember</td>
 </tr>
 </tbody>
 </table>
     </h3>
+
+
+
     <h2 class="balk"> ILLIT - Kpop </h2>
     <img src ="images/foto/ILLIT.png" alt="Kpop groep ILLIT discography + members" height="275">
     <img src ="images/foto/ILLIT 2.webp" alt="ILLIT members Preformance" height="275">
     <h3> 
-      Iroha, Wonhee, Moka, Yunah, Minju
+      <p>Mijn Favourite Kpop groep is ILLIT!!</p>
+      <p>De namen van de groepsleden zijn: Iroha, Wonhee, Moka, Yunah en Minju۶ৎ</p>
+      <p>Ik hou van hun muziek sinds het zo energiek en leuk is om naar te luisteren, ik vind ook dat ze super goed dansen en zingen wat het nog leuker maakt om naar te kijken tijdens hun preformances.</p>
+      <p>Hier is een tabel met ILLIT's discografie: </p>
+<table>
+<thead>
+<tr>
+<th> EP Titel</th>
+<th>Favourite nummer(s)</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Toki Yo Tomare</td>
+<td>Toki Yo Tomare, Toppnig, Almond Chocolate</td>
+</tr>
+<tr>
+<td>bomb </td>
+<td>Billyeoon Goyangi (Do the Dance), Jellyous, Oops!</td>
+</tr>
+<tr>
+<td>I'LL LIKE YOU</td>
+<td>Cherish (My Love), Tick-Tack/td>
+</tr>
+<tr>
+<td>SUPER REAL ME</td>
+<td>Magnetic, Midnight Fiction, Lucky Girl Syndrome</td>
+</tr>
+</tbody>
+</table>
     </h3>
+
+
+    <h2 class="balk"> Overig </h2>
+    <img src ="images/foto/BK.png" alt="Beabadoobee en Katseye" height="250">
+    <img src ="images/foto/mar.webp" alt=" yay Marina icon" height="250">
+    <img src ="images/foto/cortis.webp" alt="cortis (drool emonji) 2" height="250">
+    <h3>
+      <p>Andere artiesten die ik ook leuk vind zijn:</p>
+      <ul>
+        <li>Beabadoobee</li>
+        <li>Katseye</li>
+        <li>Marina</li>
+        <li>Cortis</li>
+        <li>XLOV</li>
+        <li>aespa</li>
+        <li>LE SSERAFIM</li>
+        <li>Ik heb er nog zoveel meer, maar anders komt hier geen eind aan...</li>
+      </ul>
+    </h3>
+
+
   </main>
-  <footer> © Alvin Zhang | HA4G | Gemaakt als opdracht voor Informatica </footer>
+  <footer> © Alvin Zhang | HA4G | Volg mij op: <a href="https://www.instagram.com/xiaoaimondtofu/">Instagram</a> en  <a href="https://www.tiktok.com/@xiaoalmondtofu1?lang=nl-NL">Tik Tok</a> | Gemaakt als opdracht voor Informatica </footer>
 </body>
 
 </html>
