--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1> Hobbies </h1>
+    <h1> Hobbies ☘︎ </h1>
     <img src ="images/foto/me.png" alt="Logo">
   </header>
 <nav>
@@ -29,7 +29,7 @@
  </h1>
 </nav>
   <main>
-    <h2 class="balk"> Games </h2>
+    <h2 class="balk"> ⊹ ࣪ ˖ Videogames ⊹ ࣪ ˖ </h2>
     <img src ="images/foto/Games 1.png" alt="Genshin & HSR" height="250">
     <img src ="images/foto/Games 2.jpeg" alt="Valorant" height="250">
     <img src ="images/foto/stardew.webp" alt="Stardew Valley" height="250">
@@ -48,12 +48,12 @@
         <li>Minecraft</li>
         <li>The Legend Of Zelda (love the franchise)</li>
         <li>Animal Crossing: New Horizons</li>
-        <li>Ik heb er nog zoveel meer maar anders komt hier geen eind aan...</li>
+        <li>Ik heb er nog zoveel meer, maar anders komt hier geen eind aan...</li>
       </ul>
 
     </h3>
 
-    <h2 class="balk"> Knutselen </h2>
+    <h2 class="balk"> ⊹ ࣪ ˖ Knutselen ⊹ ࣪ ˖</h2>
     <img src ="images/foto/craft 1.png" alt="Origami, papier marche, custom figure shelf, crochet, pipe cleaner flowers" height="250">
     <img src ="images/foto/vis.png" alt="Koi Fish closure" height="250">
     <img src ="images/foto/material.png" alt="materials" height="250">
@@ -66,7 +66,7 @@
       <p>Fun fact, Een week geleden hebben Yiting, Laura en ik in de foto linksboven, een bouqet gemaakt van pipe cleaners voor een verjaardag d:</p>
     </h3>
 
-    <h2 class="balk"> Overig </h2>
+    <h2 class="balk"> ⊹ ࣪ ˖ Overig ⊹ ࣪ ˖</h2>
     <img src ="images/foto/Over.JPG" alt="Piano" height="250">
     <img src ="images/foto/over2.jpg" alt="Hangout 1" height="250">
     <img src ="images/foto/over 3.webp" alt="Hangout 2" height="250">
