--- a/muziek.html
+++ b/muziek.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-   <h1> Muziek </h1>
+   <h1> Muziek ♪</h1>
    <img src ="images/foto/me.png" alt="Logo">
   </header>
 <nav>
@@ -29,15 +29,15 @@
  </h1>
 </nav>
   <main>
-    <h2 class="balk"> Laufey - Jazz </h2>
+    <h2 class="balk"> 𝜗ৎ Laufey - Jazz 𝜗ৎ </h2>
     <img src ="images/foto/Laufey.png" alt="artiest Laufey" height="275">
     <img src ="images/foto/laufey 2.webp" alt="artiest laufey posing" height="275">
     <h3> 
       <p>Een van mijn favourite artiesten is: Laufey!!</p>
       <p>Ik hou van haar muziek sinds het rustgevend is, het gaat vaak ook over haar persoonlijke ervaringen met het leven.
-        Ze maakt vooral jazz muziek maar heeft ook wat pop nummers.
+        Ze maakt vooral jazz muziek maar heeft ook wat pop nummers⋆˚꩜｡.
       </p>
-      <p>Hier is een tabel met Laufey haar albums:</p>
+      <p>Hier is een tabel met Laufey's discografie:</p>
 <table>
 <thead>
 <tr>
@@ -76,7 +76,7 @@
 
 
 
-    <h2 class="balk"> ILLIT - Kpop </h2>
+    <h2 class="balk"> 𝜗ৎ ILLIT - Kpop 𝜗ৎ</h2>
     <img src ="images/foto/ILLIT.png" alt="Kpop groep ILLIT discography + members" height="275">
     <img src ="images/foto/ILLIT 2.webp" alt="ILLIT members Preformance" height="275">
     <h3> 
@@ -113,7 +113,7 @@
     </h3>
 
 
-    <h2 class="balk"> Overig </h2>
+    <h2 class="balk"> 𝜗ৎ Overig 𝜗ৎ </h2>
     <img src ="images/foto/BK.png" alt="Beabadoobee en Katseye" height="250">
     <img src ="images/foto/mar.webp" alt=" yay Marina icon" height="250">
     <img src ="images/foto/cortis.webp" alt="cortis (drool emonji) 2" height="250">
